--- a/ARSIG/TP3/rapport/rapport.tex
+++ b/ARSIG/TP3/rapport/rapport.tex
@@ -152,7 +152,7 @@ d'images.
                     \centering
                 \end{figure}
 
-                On obtient alors un seuil correspondant à la valeur proposée.
+                On obtient alors un seuil optimal correspondant à la valeur proposée.
             }
 
         \item{On génère les signaux "Blocks" et "Doppler" à l'aide de la
@@ -352,5 +352,23 @@ d'images.
         afin d'obtenir de meilleurs résultats.
 
 \end{enumerate}
+
+\pagebreak
+
+\begin{appendices}
+
+    \section{Tracé d'ondelettes et de fonctions échelles par DWT inverse}
+
+    \lstinputlisting[language=Matlab]{../ex1.m}
+
+    \section{Débruitage dans l'espace des ondelettes}
+
+    \lstinputlisting[language=Matlab]{../ex2.m}
+
+    \section{Compression d'images}
+
+    \lstinputlisting[language=Matlab]{../ex2.m}
+
+\end{appendices}
 
 \end{document}
